security-groups.tf
resource "aws_security_group" "worker_group_mgmt_one" {
  name_prefix = "worker_group_mgmt_one"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
    ]
  }
}

resource "aws_security_group" "all_worker_mgmt" {
  name_prefix = "all_worker_management"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
      "172.16.0.0/12",
    ]
  }
}

resource "aws_security_group" "rds_jmiro" {
  name_prefix = "rds_jmiro"
  vpc_id = data.aws_vpc.default.id

  ingress {
    cidr_blocks = ["10.0.0.0/16"]
    from_port = 5432
    to_port   = 5432
    protocol  = "tcp"
  }
}
